--- a/msa_back/manager_msa/static/css/main.css
+++ b/msa_back/manager_msa/static/css/main.css
@@ -1,4 +1,4 @@
-.swiper {
+/* .swiper {
     max-width: 100%;
     min-height: 300px;
     max-height: 500px;
@@ -10,4 +10,32 @@
     min-height: 300px;
     max-height: 500px;
     object-position: center;
+} */
+
+.carousel-item {
+    max-height: 500px;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    /* text-align: center; */
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+} */
+
+.swiper-pagination {
+    bottom: 1vh !important;
 }
