--- a/msa_back/manager_msa/static/css/registro.css
+++ b/msa_back/manager_msa/static/css/registro.css
@@ -1,16 +1,16 @@
 .img {
     height: 80rem;
-    max-height: 100%;
+    max-height: 94%;
     width: 85rem;
     max-width: 90%;
     right: 34%;
     object-fit: cover;
-    object-position: top;
+    object-position: right;
 }
 
 .shadow-img{
     height: 80rem;
-    max-height: 100%;
+    max-height: 94%;
     width: 85rem;
     max-width: 90%;
     right: 34%;
