--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -9,48 +9,136 @@
 
 <!-- Slider main container -->
 <div class="container">
-    <div class="swiper mb-3">
-        <!-- Additional required wrapper -->
+    <!-- <div class="swiper mb-3">
+         Additional required wrapper
         <div class="swiper-wrapper">
-            <!-- Slides -->
+            Slides
             <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img object-fit-md-cover"></div>
             <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img object-fit-md-cover"></div>
             <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img object-fit-md-cover"></div>
         </div>
-        <!-- If we need pagination -->
+        If we need pagination 
         <div class="swiper-pagination"></div>
     
-        <!-- If we need navigation buttons -->
+        If we need navigation buttons 
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     
-        <!-- If we need scrollbar
-        <div class="swiper-scrollbar"></div> -->
+        If we need scrollbar
+        <div class="swiper-scrollbar"></div> 
+    </div> -->
+
+    <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner rounded my-3">
+          <div class="carousel-item active">
+            <img src="{% static 'img/gen-v.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block shadow-inset">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="{% static 'img/gen-v.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="{% static 'img/gen-v.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button> -->
     </div>
 
     <div class="container mb-3">
         <h2 class="text-white mb-3">Recomendações para você</h2>
-        <div class="row gap-5 mb-3">
-            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 18.438rem;">
-                <div class="card-body" style="padding: 0.5rem !important;">
-                    <div class="d-flex justify-content-center mb-2">
-                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 10rem; height: 12.5rem;" data-swiper-parallax="-300">
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
-                            <p class="card-text">00/00/0000</p>
+        
+        <div class="row mb-3">
+            <!-- Swiper -->
+            <div class="mb-3">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        {% for video in videos.results %}
+                
+                        {% if video.media_type == 'tv' %}
+                        <div class="swiper-slide">
+                            <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 19rem;">
+                                <div class="card-body" style="padding: 0.5rem !important;">
+                                    <div class="d-flex justify-content-center mb-2">
+                                        <img class="text-center" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{video.poster_path}}" alt="" style="width: 11rem; height: 13rem;" data-swiper-parallax="-300">
+                                    </div>
+                                    <div class="row align-middle">
+                                        <div class="col-sm">
+                                            <h6 class="card-subtitle text-black">{{video.name}}</h6>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="rounded-circle bg-primary text-center position-relative float-end" style="height: 3rem; width: 3rem;">
+                                                <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                                    {{ video.vote_average|floatformat:1 }}
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <p class="card-text fs-6">{{ video.first_air_date  }}</p>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 3.125rem; width: 3.125rem;">
-                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                9.8
-                            </span>
+
+                        {% else %}
+
+                        <div class="swiper-slide">
+                            <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 19rem;">
+                                <div class="card-body" style="padding: 0.5rem !important;">
+                                    <div class="d-flex justify-content-center mb-2">
+                                        <img class="text-center" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{video.poster_path}}" alt="" style="width: 11rem; height: 13rem;" data-swiper-parallax="-300">
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <h6 class="card-subtitle text-black">{{video.title}}</h6>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="rounded-circle bg-primary text-center position-relative float-end" style="height: 3rem; width: 3rem;">
+                                                <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                                    {{ video.vote_average|floatformat:1 }}
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <p class="card-text fs-6">{{ video.release_date }}</p>
+                                    </div>
+                                    <a href="#" class="stretched-link"></a>
+                                </div>
+                            </div>
                         </div>
+
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                    <a href="#" class="stretched-link"></a>
+                    <!-- If we need navigation buttons  -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+
+            <!-- <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
                 <div class="card-body" style="padding: 0.5rem !important;">
                     <div class="d-flex justify-content-center mb-2">
                         <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;" data-swiper-parallax="-300"> 
@@ -68,83 +156,7 @@
                     </div>
                     <a href="#" class="stretched-link"></a>
                 </div>
-            </div>
-            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
-                <div class="card-body" style="padding: 0.5rem !important;">
-                    <div class="d-flex justify-content-center mb-2">
-                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;" data-swiper-parallax="-300">
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
-                            <p class="card-text">00/00/0000</p>
-                        </div>
-                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
-                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                9.8
-                            </span>
-                        </div>
-                    </div>
-                    <a href="#" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
-                <div class="card-body" style="padding: 0.5rem !important;">
-                    <div class="d-flex justify-content-center mb-2">
-                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
-                            <p class="card-text">00/00/0000</p>
-                        </div>
-                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
-                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                9.8
-                            </span>
-                        </div>
-                    </div>
-                    <a href="#" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
-                <div class="card-body" style="padding: 0.5rem !important;">
-                    <div class="d-flex justify-content-center mb-2">
-                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
-                            <p class="card-text">00/00/0000</p>
-                        </div>
-                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
-                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                9.8
-                            </span>
-                        </div>
-                    </div>
-                    <a href="#" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
-                <div class="card-body" style="padding: 0.5rem !important;">
-                    <div class="d-flex justify-content-center mb-2">
-                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
-                            <p class="card-text">00/00/0000</p>
-                        </div>
-                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
-                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                9.8
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <a href="#" class="stretched-link"></a>
-            </div>
+            </div> -->
         </div>
 
 
@@ -154,30 +166,68 @@
     </div>
 </div>
 
-<script type="module">
-    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
+
+{% block scripts %} 
+<script>
+    // import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
   
-    const swiper = new Swiper('.swiper',{
-    // Optional parameters
-    //   direction: 'horizontal',
-    speed: 600,
-    parallax: true,
-    loop: true,
-    autoplay: {
-        delay: 3000,
-        disableOnInteraction: true,
-    },
+    // const swiper = new Swiper('.swiper',{
+    // // Optional parameters
+    // //   direction: 'horizontal',
+    // speed: 600,
+    // parallax: true,
+    // loop: true,
+    // autoplay: {
+    //     delay: 3000,
+    //     disableOnInteraction: true,
+    // },
 
-    // If we need pagination
-    pagination: {
-        el: '.swiper-pagination',
-    },
+    // // If we need pagination
+    // pagination: {
+    //     el: '.swiper-pagination',
+    // },
 
-    // Navigation arrows
-    navigation: {
+    // // Navigation arrows
+    // navigation: {
+    //     nextEl: '.swiper-button-next',
+    //     prevEl: '.swiper-button-prev',
+    // },
+    // })
+
+    const myCarouselElement = document.querySelector('#carousel')
+
+    new bootstrap.Carousel(myCarouselElement, {
+        interval: 3000,
+        touch: false
+    })
+
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 2,
+      spaceBetween: 10,
+      loop: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
         nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-    },
-})
+        prevEl: '.swiper-button-prev'
+      },
+      breakpoints: {
+        640: {
+          slidesPerView: 2,
+          spaceBetween: 20,
+        },
+        768: {
+          slidesPerView: 4,
+          spaceBetween: 40,
+        },
+        1024: {
+          slidesPerView: 6,
+          spaceBetween: 50,
+        },
+      },
+    });
 </script>
+{% endblock scripts %}
 {% endblock %}
