--- a/msa_back/manager_msa/templates/Videos/infos.html
+++ b/msa_back/manager_msa/templates/Videos/infos.html
@@ -13,18 +13,66 @@
         {% endif %}
         <div class="row">
             <div class="col-md-3">
-                <img class="rounded" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{details.poster_path}}" alt="">
+                <img class="rounded w-100" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{details.poster_path}}" alt="">
+                <div class="mt-2 d-flex gap-2 flex-wrap">
+                    {% for d in details.genres %}
+                        <span class="badge rounded-pill text-bg-dark border">{{ d.name }}</span>
+                    {% endfor %}
+                </div>
             </div>
             <div class="col">
-                <h2>{{details.title}}</h2>
-                <p>Titulo original: {{details.original_title}}</p>
+                <div class="d-flex justify-content-between align-middle">
+                    <div>
+                        <h2>{{details.title}}</h2>
+                        <p class="mb-3">Titulo original: {{details.original_title}}</p>
+                    </div>
+                    <div class="float-end">
+                        <h1>
+                            {% if details.vote_average >= 7 %}
+                                <span class="badge text-bg-success">
+                                    <i class="fa-solid fa-star me-1"></i>
+                                    {{ details.vote_average|floatformat:1 }}
+                                </span>
+                            {% elif details.vote_average >= 5 %}
+                                <span class="badge text-bg-warning">
+                                    <i class="fa-solid fa-star me-1"></i>
+                                    {{ details.vote_average|floatformat:1 }}
+                                </span>
+                            {% else %}
+                                <span class="badge text-bg-danger">
+                                    <i class="fa-solid fa-star me-1"></i>
+                                    {{ details.vote_average|floatformat:1 }}
+                                </span>
+                            {% endif %}
+                        </h1>
+                    </div>
+                </div>
+                
+                <form action="" method="POST" class="d-flex gap-2 mb-3">
+                    {% csrf_token %}
+                    <!-- <button type="submit" class="btn btn-success">
+                        <i class="fa-solid fa-list"></i> Adicionar na lista
+                    </button> -->
+                    <button type="submit" class="btn btn-success">
+                        <i class="fa-regular fa-bookmark me-1"></i> Adicionar na lista
+                    </button>
+                    <button type="submit" class="btn btn-danger">
+                        <i class="fa-regular fa-heart me-1"></i> Favoritos
+                    </button>
+                    <a href="{% url 'lista' user.id %}" class="btn btn-primary">
+                        <i class="fa-solid fa-list me-1"></i> Ver lista de Filmes
+                    </a>
+                </form>
+
+                <span>
+                    <p class="text-white-50">{{ details.tagline }}</p>
+                </span>
                 <p>{{ details }}</p>
             </div>
         </div>
-        <form action="" method="POST">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-success">Adicionar na lista</button>
-            <a href="{% url 'lista' user.id %}" class="btn btn-primary">Ver lista de Filmes</a>
-        </form>
+        <div>
+            <h3>Sinopse</h3>
+            {{ details.overview }}
+        </div>
     </div>
 {% endblock %}
